--- a/styles/video.css
+++ b/styles/video.css
@@ -1,37 +1,73 @@
 .video-container
 {
     /*height: 868px;*/
+
     display: grid;
 
-    grid-template-columns: repeat(2, minmax(200px, 500px));
+    max-width: 1024px;
+    grid-template-columns: repeat(2, minmax(100px, 500px));
     margin: 0 auto;
-    grid-template-rows: auto;
+    grid-template-rows: repeat(2, minmax(20vh, 40vh));
     grid-gap: 10px;
 }
 
+.video__player
+{
+    position: relative;
+    transition: all 1.15s linear;
+    background-color: black;
+    border-radius: 10px;
+}
+
+
 .video
 {
+    transition: all 1.15s linear;
+
     height: 100%;
     width: 100%;
     background-color: black;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
-    object-fit: cover;
+    /*object-fit: cover;*/
 }
 
 .video-opened
 {
-    position: absolute;
-    transition-duration: 1s;
-    transition-delay: 1s;
-    z-index: 1;
+    /*transform-origin: center;*/
+    position: absolute !important;
+    /*transition-duration: 1s;*/
+    /*transition-delay: 1s;*/
+    z-index: 12;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    /*top: 100px;*/
+    /*left: 260px;*/
+    /*transform: scale(2) translate(13vw, 11vh);*/
+}
 
-    transform: scale(2) translate(13vw, 11vh);
+.player__panel
+{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    border-radius: 10px;
 }
 
 .canvas {
-    z-index: 2;
+    position: fixed;
+    bottom: 45px;
+    z-index: 22;
 }
 
 /*video__player:hover*/
@@ -58,27 +94,7 @@
     /*}*/
 /*}*/
 
-.video__player
-{
-    position: relative;
-    background-color: black;
-    border-radius: 10px;
-}
 
-.player__panel
-{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    position: absolute;
-    bottom: 0;
-    height: 30px;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: #fff;
-    border-radius: 10px;
-}
 
 .player__button
 {
@@ -88,3 +104,17 @@
     border-radius: 8px;
 }
 
+@media(max-width: 980px) {
+    .video-container
+    {
+        grid-template-columns: minmax(280px,800px);
+        grid-template-rows: auto;
+    }
+}
+
+@media(max-width: 550px) {
+    .video-container
+    {
+        margin-top: 50px;
+    }
+}
