--- a/styles/video.css
+++ b/styles/video.css
@@ -1,9 +1,6 @@
 .video-container
 {
-    /*height: 868px;*/
-
     display: grid;
-
     max-width: 1024px;
     grid-template-columns: repeat(2, minmax(100px, 500px));
     margin: 0 auto;
@@ -15,38 +12,31 @@
 {
     position: relative;
     transition: all 1.15s linear;
+    -webkit-transition: all 1.15s linear;
     background-color: black;
     border-radius: 10px;
+    will-change: width,height;
 }
 
 
 .video
 {
-    transition: all 1.15s linear;
-
     height: 100%;
     width: 100%;
     background-color: black;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
-    /*object-fit: cover;*/
 }
 
 .video-opened
 {
-    /*transform-origin: center;*/
     position: absolute !important;
-    /*transition-duration: 1s;*/
-    /*transition-delay: 1s;*/
     z-index: 12;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
-    /*top: 100px;*/
-    /*left: 260px;*/
-    /*transform: scale(2) translate(13vw, 11vh);*/
 }
 
 .player__panel
@@ -65,36 +55,10 @@
 }
 
 .canvas {
-    position: fixed;
-    bottom: 45px;
+    position: absolute;
+    bottom: 30px;
     z-index: 22;
 }
-
-/*video__player:hover*/
-/*{*/
-    /*animation-name: fullscreen;*/
-    /*animation-duration: 1s;*/
-    /*transition: ease-in-out;*/
-    /*animation-fill-mode: forwards;*/
-/*}*/
-
-/*@keyframes fullscreen*/
-/*{*/
-    /*0% {*/
-        /*transform: scale(1);*/
-        /*-webkit-transform: scale(1);*/
-        /*z-index: 1;*/
-    /*}*/
-    /*100% {*/
-        /*transform: scale(2);*/
-        /*-webkit-transform: scale(2.0);*/
-        /*!*width: 99vw;*!*/
-        /*!*height: 99vh;*!*/
-
-    /*}*/
-/*}*/
-
-
 
 .player__button
 {
@@ -102,6 +66,12 @@
     text-decoration: none;
     outline: none;
     border-radius: 8px;
+}
+
+.player__settings
+{
+    display: flex;
+    justify-content: space-evenly;
 }
 
 @media(max-width: 980px) {
@@ -116,5 +86,45 @@
     .video-container
     {
         margin-top: 50px;
+    }
+
+    .input__contrast
+    {
+        /*transform: rotate(90deg);*/
+        /*margin-bottom: 100px;*/
+        width: 70px;
+    }
+
+    .input__brightness
+    {
+        /*transform: rotate(90deg);*/
+        /*margin-bottom: 100px;*/
+        width: 70px;
+    }
+
+    .player__settings
+    {
+        flex-direction: row;
+        flex-wrap: wrap;
+        z-index: 14;
+        width: 160px;
+        position: absolute;
+        right: 0px;
+        bottom: 30px;
+        background-color: rgba(0,0,0,0.4);
+        border-radius: 8px;
+        -webkit-border-radius: 8px;
+    }
+
+    .player__settings p
+    {
+        margin: 5px;
+    }
+}
+
+@media(max-width: 420px) {
+    .canvas
+    {
+        bottom: 75px;
     }
 }
