--- a/styles/video.css
+++ b/styles/video.css
@@ -93,6 +93,16 @@
     -webkit-transition-duration: 0.2s;
 }
 
+.video__light-value
+{
+    font-size: 11px;
+    color: white;
+    position: absolute;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
 @media(max-width: 980px) {
     .video-container
     {
