--- a/styles/video.css
+++ b/styles/video.css
@@ -23,11 +23,9 @@
 .video
 {
     height: 100%;
-    width: 100%;
+    display: block;
+    margin: 0 auto;
     background-color: black;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
 }
 
 .video-opened
@@ -103,6 +101,17 @@
     background-color: rgba(0, 0, 0, 0.6);
 }
 
+.motion_canvas
+    {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        z-index: 100;
+        pointer-events: none;
+    }
+
 @media(max-width: 980px) {
     .video-container
     {
@@ -113,6 +122,14 @@
     .video__player
     {
         height: 100%;
+    }
+
+    .video
+    {
+        width: 100%;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 10px;
     }
 }
 
