--- a/styles/css.css
+++ b/styles/css.css
@@ -411,6 +411,14 @@ main
 
 .card__title
 {
+    max-height: 60px;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+
     font-size: 1.7rem;
     font-weight: bold;
     grid-column: span 2;
