--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,88 @@
+html,
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    margin: 0;
+    padding: 0;
+    color: #333333;
+    overflow-x: hidden;
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+footer
+{
+    font-size: 12px;
+    color: #858585;
+    border-top: 1px solid #dedddb;
+    margin-top: auto;
+    width:100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.Link
+{
+    text-decoration: none;
+    color: rgba(51, 51, 51, 0.6);
+}
+
+.Link:hover
+{
+    color: black;
+}
+
+main
+{
+    margin: 20px;
+}
+
+@media(max-width: 975px)
+{
+    html
+    {
+        font-size: 12px;
+    }
+}
+
+@media(max-width: 855px)
+{
+    html
+    {
+        font-size: 10px;
+    }
+}
+
+@media(max-width: 755px)
+{
+    html
+    {
+        font-size: 9px;
+    }
+
+    header
+    {
+        border: none;
+        height: 20px;
+    }
+}
+
+@media(max-width: 645px)
+{
+    html
+    {
+        font-size: 7px;
+    }
+}
+
+@media(max-width: 550px) {
+    html
+    {
+        font-size: 8px;
+    }
 }
