--- a/src/view/components/MusicPlayer/MusicPlayer.css
+++ b/src/view/components/MusicPlayer/MusicPlayer.css
@@ -30,12 +30,12 @@
 }
 
 .MusicPlayer-ControlTime,
-.MusicPlayer-Volume
+.MusicPlayer-ControlsVolume
 {
     color: #A1A1A1;
 }
 
-.MusicPlayer-Control
+.MusicPlayer-SongControl
 {
     margin-top: 15px;
     display: flex;
@@ -50,13 +50,13 @@
     align-items: center;
 }
 
-.MusicPlayer-Prev
+.MusicPlayer-ControlsPrev
 {
     cursor: pointer;
     margin-right: 27px;
 }
 
-.MusicPlayer-Next
+.MusicPlayer-ControlsNext
 {
     cursor: pointer;
     transform: rotate(180deg);
