--- a/src/view/components/MusicPlayer/MusicPlayer.css
+++ b/src/view/components/MusicPlayer/MusicPlayer.css
@@ -70,7 +70,7 @@
     background: rgba(255,255,255,0);
 }
 
-.MusicPlayer-ControlSlider:focus
+.MusicPlayer-ControlSlider:focus,
 .MusicPlayer-ControlsSlider:focus
 {
     outline: none;
