--- a/src/view/components/Footer/Footer@touch.css
+++ b/src/view/components/Footer/Footer@touch.css
@@ -1,25 +1,25 @@
 .Footer
 {
+    line-height: 8px;
+    height: 32px;
     display: inline-table;
     margin: 0;
     font-size: 1.1rem;
     opacity: 0.6;
     color: #333333;
     list-style: none;
-    line-height: 35px;
-    height:64px;
 }
 
 .Footer-Tab
 {
     display: table-cell;
-    padding: 17px 14px;
+    padding: 10px 10px 0 0;
 }
 
-.Footer_side_right
+.Footer-Tab_side_right
 {
+    line-height: 20px;
     float: right;
-    line-height: 68px;
     margin-right: 24px;
     font-size: 1.1rem;
 }
