--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html,
-body {
+.body {
     margin: 0;
     padding: 0;
     color: #333333;
@@ -10,6 +10,11 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+body
+{
+    margin: 0;
 }
 
 footer
